--- a/Kismat App/Views/ViewControllers/ChatVCs/MessageUserList/ChatUsersTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ChatVCs/MessageUserList/ChatUsersTVCell.xib
@@ -12,20 +12,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="115" id="KGk-i7-Jjw" customClass="ChatUsersTVCell" customModule="Kismmet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="376" height="115"/>
+            <rect key="frame" x="0.0" y="0.0" width="420" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="376" height="115"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8VL-9l-UH6">
-                        <rect key="frame" x="0.0" y="0.0" width="376" height="115"/>
+                        <rect key="frame" x="0.0" y="0.0" width="420" height="115"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IEx-UV-Aa1" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="376" height="115"/>
+                                <rect key="frame" x="0.0" y="0.0" width="420" height="115"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zoya Grey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxM-wu-Nil" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="61" y="12" width="225" height="21"/>
+                                        <rect key="frame" x="98" y="12" width="225" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="225" id="Sc2-hJ-fzz"/>
                                             <constraint firstAttribute="height" constant="21" id="dcl-HM-BGT"/>
@@ -44,7 +44,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20min ago" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHU-9t-wDC" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="282" y="12" width="70" height="21"/>
+                                        <rect key="frame" x="319" y="12" width="70" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="b52-i8-Rhu"/>
                                             <constraint firstAttribute="width" constant="70" id="qxh-G2-WFO"/>
@@ -62,7 +62,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rice University, Houston TX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5J1-oU-sDy" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="61" y="31" width="240" height="17"/>
+                                        <rect key="frame" x="98" y="31" width="240" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="5rU-ya-iEA"/>
                                             <constraint firstAttribute="width" constant="240" id="krd-bp-DRH"/>
@@ -82,7 +82,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dHs-Tz-bSM" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="336" y="35" width="16" height="16"/>
+                                        <rect key="frame" x="373" y="35" width="16" height="16"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5D-0t-bdJ" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
@@ -119,7 +119,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="girl" translatesAutoresizingMaskIntoConstraints="NO" id="URB-SM-E9s" customClass="RoundedImageView" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="13" y="11" width="40" height="40"/>
+                                        <rect key="frame" x="50" y="8" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="lRe-OE-ayJ"/>
                                             <constraint firstAttribute="width" constant="40" id="rXt-g2-Mpi"/>
@@ -143,7 +143,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rvh-hC-sT0" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="43" y="41" width="10" height="10"/>
+                                        <rect key="frame" x="81" y="41" width="10" height="10"/>
                                         <color key="backgroundColor" name="Success"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="10" id="SZ5-I3-ULx"/>
@@ -162,7 +162,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey there! Thank you for reaching out to me. Test" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7O2-Lk-CK8" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="13" y="67" width="322" height="28.333333333333329"/>
+                                        <rect key="frame" x="50" y="67" width="322" height="28.333333333333329"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28.329999999999998" id="vI5-2l-GRQ"/>
                                         </constraints>
@@ -184,40 +184,40 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Lk-bY-RTK">
-                                        <rect key="frame" x="-44" y="112" width="420" height="1"/>
+                                        <rect key="frame" x="-44" y="112" width="464" height="1"/>
                                         <color key="backgroundColor" red="0.88235294117647056" green="0.88235294117647056" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="5M3-SJ-4wp"/>
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="rvh-hC-sT0" firstAttribute="top" secondItem="IEx-UV-Aa1" secondAttribute="top" constant="41" id="2Gw-dc-IIp"/>
                                     <constraint firstItem="5J1-oU-sDy" firstAttribute="top" secondItem="LHU-9t-wDC" secondAttribute="bottom" constant="-2" id="3Ie-kO-h6p"/>
-                                    <constraint firstAttribute="trailing" secondItem="5J1-oU-sDy" secondAttribute="trailing" constant="75" id="51x-Ae-aJ2"/>
+                                    <constraint firstAttribute="trailing" secondItem="5J1-oU-sDy" secondAttribute="trailing" constant="82" id="51x-Ae-aJ2"/>
                                     <constraint firstItem="5J1-oU-sDy" firstAttribute="top" secondItem="cxM-wu-Nil" secondAttribute="bottom" constant="-2" id="6TI-XV-WwJ"/>
                                     <constraint firstItem="5J1-oU-sDy" firstAttribute="leading" secondItem="URB-SM-E9s" secondAttribute="trailing" constant="8" id="7lu-7R-Ydp"/>
-                                    <constraint firstAttribute="leading" secondItem="URB-SM-E9s" secondAttribute="trailing" constant="-53" id="940-hA-CIp"/>
-                                    <constraint firstAttribute="trailing" secondItem="7O2-Lk-CK8" secondAttribute="trailing" constant="41" id="D5A-Vo-KZS"/>
-                                    <constraint firstItem="URB-SM-E9s" firstAttribute="top" secondItem="IEx-UV-Aa1" secondAttribute="top" constant="11" id="DFT-xT-RCl"/>
+                                    <constraint firstAttribute="leading" secondItem="URB-SM-E9s" secondAttribute="trailing" constant="-90" id="940-hA-CIp"/>
+                                    <constraint firstAttribute="trailing" secondItem="7O2-Lk-CK8" secondAttribute="trailing" constant="48" id="D5A-Vo-KZS"/>
+                                    <constraint firstItem="URB-SM-E9s" firstAttribute="top" secondItem="IEx-UV-Aa1" secondAttribute="top" constant="8" id="DFT-xT-RCl"/>
                                     <constraint firstItem="cxM-wu-Nil" firstAttribute="top" secondItem="IEx-UV-Aa1" secondAttribute="top" constant="12" id="DqZ-k8-YkW"/>
-                                    <constraint firstItem="5J1-oU-sDy" firstAttribute="leading" secondItem="rvh-hC-sT0" secondAttribute="trailing" constant="8" id="Fue-ux-kt8"/>
-                                    <constraint firstItem="rvh-hC-sT0" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="43" id="Gxh-Vf-CW4"/>
-                                    <constraint firstAttribute="trailing" secondItem="LHU-9t-wDC" secondAttribute="trailing" constant="24" id="Mcw-Bd-1dh"/>
-                                    <constraint firstAttribute="trailing" secondItem="dHs-Tz-bSM" secondAttribute="trailing" constant="24" id="NLg-F1-Kte"/>
+                                    <constraint firstItem="5J1-oU-sDy" firstAttribute="leading" secondItem="rvh-hC-sT0" secondAttribute="trailing" constant="7" id="Fue-ux-kt8"/>
+                                    <constraint firstItem="rvh-hC-sT0" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="81" id="Gxh-Vf-CW4"/>
+                                    <constraint firstAttribute="trailing" secondItem="LHU-9t-wDC" secondAttribute="trailing" constant="31" id="Mcw-Bd-1dh"/>
+                                    <constraint firstAttribute="trailing" secondItem="dHs-Tz-bSM" secondAttribute="trailing" constant="31" id="NLg-F1-Kte"/>
                                     <constraint firstItem="3Lk-bY-RTK" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="-44" id="O4n-Jh-KB0"/>
-                                    <constraint firstAttribute="bottom" secondItem="URB-SM-E9s" secondAttribute="bottom" constant="64" id="RUp-af-AEP"/>
-                                    <constraint firstAttribute="trailing" secondItem="cxM-wu-Nil" secondAttribute="trailing" constant="90" id="Sj6-Un-Kzr"/>
+                                    <constraint firstAttribute="bottom" secondItem="URB-SM-E9s" secondAttribute="bottom" constant="67" id="RUp-af-AEP"/>
+                                    <constraint firstAttribute="trailing" secondItem="cxM-wu-Nil" secondAttribute="trailing" constant="97" id="Sj6-Un-Kzr"/>
                                     <constraint firstAttribute="bottom" secondItem="dHs-Tz-bSM" secondAttribute="bottom" constant="64" id="Vjv-hv-F7N"/>
                                     <constraint firstAttribute="bottom" secondItem="5J1-oU-sDy" secondAttribute="bottom" constant="67" id="WvZ-BB-I30"/>
                                     <constraint firstItem="LHU-9t-wDC" firstAttribute="top" secondItem="IEx-UV-Aa1" secondAttribute="top" constant="12" id="YnL-kj-vMx"/>
                                     <constraint firstAttribute="bottom" secondItem="3Lk-bY-RTK" secondAttribute="bottom" constant="2" id="Yu5-cG-Gi3"/>
                                     <constraint firstAttribute="trailing" secondItem="3Lk-bY-RTK" secondAttribute="trailing" id="bSc-8e-KK6"/>
-                                    <constraint firstItem="7O2-Lk-CK8" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="13" id="fT1-uu-vn3"/>
+                                    <constraint firstItem="7O2-Lk-CK8" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="50" id="fT1-uu-vn3"/>
                                     <constraint firstItem="cxM-wu-Nil" firstAttribute="leading" secondItem="URB-SM-E9s" secondAttribute="trailing" constant="8" id="t8n-MY-wA4"/>
-                                    <constraint firstItem="URB-SM-E9s" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="13" id="utZ-wK-bRl"/>
-                                    <constraint firstItem="7O2-Lk-CK8" firstAttribute="top" secondItem="URB-SM-E9s" secondAttribute="bottom" constant="16" id="vXN-yR-mnZ"/>
+                                    <constraint firstItem="URB-SM-E9s" firstAttribute="leading" secondItem="IEx-UV-Aa1" secondAttribute="leading" constant="50" id="utZ-wK-bRl"/>
+                                    <constraint firstItem="7O2-Lk-CK8" firstAttribute="top" secondItem="URB-SM-E9s" secondAttribute="bottom" constant="19" id="vXN-yR-mnZ"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
@@ -263,27 +263,27 @@
                 <outlet property="proffLbl" destination="5J1-oU-sDy" id="Knj-Ti-kvW"/>
                 <outlet property="profileIcon" destination="URB-SM-E9s" id="KCp-tE-6P9"/>
             </connections>
-            <point key="canvasLocation" x="181.67938931297709" y="44.718309859154935"/>
+            <point key="canvasLocation" x="215.26717557251908" y="44.718309859154935"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="5J1-oU-sDy">
-            <size key="intrinsicContentSize" width="134.66666666666666" height="13"/>
+            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
         </designable>
         <designable name="7O2-Lk-CK8">
-            <size key="intrinsicContentSize" width="249.66666666666666" height="28.333333333333332"/>
+            <size key="intrinsicContentSize" width="339.33333333333331" height="40.666666666666664"/>
         </designable>
         <designable name="J5D-0t-bdJ">
-            <size key="intrinsicContentSize" width="9.3333333333333339" height="9.6666666666666661"/>
+            <size key="intrinsicContentSize" width="17.333333333333332" height="20.333333333333332"/>
         </designable>
         <designable name="LHU-9t-wDC">
-            <size key="intrinsicContentSize" width="53" height="13"/>
+            <size key="intrinsicContentSize" width="80.666666666666671" height="20.333333333333332"/>
         </designable>
         <designable name="URB-SM-E9s">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="cxM-wu-Nil">
-            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
