--- a/Kismat App/Views/ViewControllers/Profile/Xibs/ProfileHeaderPNewTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Profile/Xibs/ProfileHeaderPNewTVCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="242" id="KGk-i7-Jjw" customClass="ProfileHeaderPNewTVCell" customModule="Kismmet" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="242" id="KGk-i7-Jjw" customClass="ProfileHeaderPNewTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="242"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -33,7 +33,7 @@
                                             <constraint firstAttribute="width" constant="12" id="oWa-Nn-jbZ"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageView:7v4-PC-B7E:image" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7v4-PC-B7E">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageView:7v4-PC-B7E:image" translatesAutoresizingMaskIntoConstraints="NO" id="7v4-PC-B7E">
                                         <rect key="frame" x="348" y="28" width="12" height="12"/>
                                         <color key="tintColor" name="warning"/>
                                         <constraints>
@@ -195,7 +195,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rice University, Houston TX" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wBh-yd-E5r" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="57" y="74" width="253" height="14"/>
+                                                <rect key="frame" x="57" y="74" width="253" height="20.333333333333329"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="253" id="757-as-T4S"/>
                                                 </constraints>
@@ -214,7 +214,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Professor" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D96-EJ-0RV" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="110" y="80" width="146" height="31"/>
+                                                <rect key="frame" x="110" y="86.333333333333343" width="146" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="31" id="Rvt-81-i1E"/>
                                                     <constraint firstAttribute="width" constant="146" id="TEa-br-16i"/>
@@ -348,22 +348,22 @@
     </objects>
     <designables>
         <designable name="0lp-It-kBv">
-            <size key="intrinsicContentSize" width="19.666666666666668" height="21"/>
+            <size key="intrinsicContentSize" width="19.666666666666668" height="22"/>
         </designable>
         <designable name="D96-EJ-0RV">
-            <size key="intrinsicContentSize" width="51.666666666666664" height="14"/>
+            <size key="intrinsicContentSize" width="73" height="20.333333333333332"/>
         </designable>
         <designable name="EOP-78-ZqW">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="Uq4-vH-8Nw">
-            <size key="intrinsicContentSize" width="307.33333333333331" height="14"/>
+            <size key="intrinsicContentSize" width="424" height="20.333333333333332"/>
         </designable>
         <designable name="o3B-c6-HKx">
-            <size key="intrinsicContentSize" width="175.66666666666666" height="21"/>
+            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
         </designable>
         <designable name="wBh-yd-E5r">
-            <size key="intrinsicContentSize" width="150.33333333333334" height="14"/>
+            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -371,7 +371,7 @@
         <image name="bell.badge.fill" catalog="system" width="117" height="128"/>
         <image name="ellipsis.message.fill" catalog="system" width="128" height="114"/>
         <image name="girl" width="407" height="612"/>
-        <image name="imageView:7v4-PC-B7E:image" catalog="system" width="128" height="123">
+        <image name="imageView:7v4-PC-B7E:image" width="128" height="123">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGBwpYJHZlcnNpb25ZJGFyY2hpdmVyVCR0b3BYJG9iamVjdHMSAAGGoF8QD05T
 S2V5ZWRBcmNoaXZlctEICVRyb290gAGvEBELDBscIRkmKywzNjlDS0xQU1UkbnVsbNcNDg8QERITFBUW
